<package format="2">
  <name>ur_demo</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating ur_demo</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_stopper</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>